fixed issues with quality section and added grid flair behind image

--- a/style.css
+++ b/style.css
@@ -294,12 +294,29 @@ transition: all 300ms ease;
 
 .quality__img--wrapper{
   width:50%;
-  padding-right: 30px;
   border: 1px solid rgba(36, 62, 99, 0.207);
+  position: relative;
+  z-index: 2;
 }
 
 .quality__img{
   width: 100%;
+  z-index: 1;
+  position: relative;
+}
+
+.quality__grid {
+    transform: translateX(50%) translateY(50%) scaleX(1) scaleY(1);
+    width: 80px;
+    height: 80px;
+    position: absolute;
+    right: 0px;
+    bottom: 0px;
+    fill: rgb(100, 21, 255);
+    --tw-text-opacity: 1;
+    color: rgba(100, 21, 255, var(--tw-text-opacity));
+    z-index: 0;
+    display: block;
 }
 
 .quality__btn{
@@ -319,3 +336,5 @@ transition: all 300ms ease;
   cursor: pointer;
   background-color:#5613da;
 }
+
+/* Steps */
